# quicklook

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
about/: index.html
cli/: index.html
docs/: cli.md  getting_started.md  index.md  installation.md
getting_started/: index.html
installation/: index.html
quicklook/: demo.py  example_arrays.py  quicklook.py
search/: search_index.json
tests/: test_quicklook.py
