[tool.poetry]
name = "quicklook"
version = "1.0.0"
description = "An easy way to view numpy arrays"
authors = ["Sam Murphy <samsammurphy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
typer = "^0.7.0"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
