[tool.poetry]
name = "quicklook"
version = "1.1.0"
description = "An easy way to view numpy arrays"
license = "BSD-2-Clause"
authors = ["Sam Murphy <samsammurphy@gmail.com>"]
readme = "README.md"
homepage = "https://samsammurphy.github.io/quicklook/"
repository = "https://github.com/samsammurphy/quicklook"

# PyPI trove classifiers that describe the project
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Matplotlib",
    "Framework :: Pytest",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
typer = "^0.7.0"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"

[tool.poetry.scripts]
quicklook = "quicklook.quicklook:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
